# PathWatch

./: .gitmodules  .travis.yml  CMakeLists.txt  LICENSE  README.md
example/: example.cpp
examples/: watch-directory.cpp  watch-file.cpp
include/: filewatch.h  fw_api.h  pathwatch.h  pw_api.h
src/: filewatch.cpp  filewatch_win.cpp  filewatch_win.h  pathwatch-fallback.cpp  pathwatch-unix.cpp  pathwatch-win.cpp  pathwatch.cpp  pathwatch_win.cpp  pathwatch_win.h
tests/: test1.cpp
